Updated theme colors

--- a/src/lib/variables.scss
+++ b/src/lib/variables.scss
@@ -1,2 +1,19 @@
 /* Variables and mixins declared here will be available in all other SCSS files */ /* https://github.com/jgthms/bulma/issues/1293 */
 $body-overflow-y: auto;
+$scheme-main: #010404;
+$scheme-main-bis: #0e1111;
+$scheme-main-ter: #0e1111;
+$background: #1b1b1b;
+$border: #acacac;
+$primary: #b43218;
+$text: #fbfefe;
+$text-light: #fbfefe;
+$text-dark: #fbfefe;
+$text-strong: #fbfefe;
+$link: #b43218;
+$link-hover: #5e1b0d;
+$button-hover-color: #b43218;
+$button-hover-border-color: #b43218;
+$navbar-background-color: #0e1111;
+$panel-heading-background-color: #b43218;
+$panel-item-border: 1px solid #1b1b1b;
