Updated message & notification box theme

--- a/src/lib/variables.scss
+++ b/src/lib/variables.scss
@@ -17,3 +17,7 @@ $button-hover-border-color: #b43218;
 $navbar-background-color: #0e1111;
 $panel-heading-background-color: #b43218;
 $panel-item-border: 1px solid #1b1b1b;
+$message-body-color: #dfdfdf;
+$message-background-color: #5e1b0d;
+$message-header-color: #fbfefe;
+$message-header-background-color: #b43218;
