Updated theme for admin panel

--- a/src/lib/variables.scss
+++ b/src/lib/variables.scss
@@ -21,3 +21,6 @@ $message-body-color: #dfdfdf;
 $message-background-color: #5e1b0d;
 $message-header-color: #fbfefe;
 $message-header-background-color: #b43218;
+$card-background-color: #1b1b1b;
+$card-header-background-color: #b43218;
+$card-footer-border-top: solid 1px #2b2b2b;
